--- a/code-backend/src/main/resources/application.properties
+++ b/code-backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=code-challenge
 spring.datasource.driverClassName=org.h2.Driver
+server.port=8080
+spring.main.web-application-type=servlet
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
